src/yini_test/cases/golden/strict/valid/numbers/digit-separator-in-float.strict.yini
@yini strict

^ Numbers
val = 3_141.592_653

/END

