src/yini_test/cases/golden/strict/invalid/numbers/malformed-underscore-double.strict.yini
@yini strict

^ Numbers
val = 1__000

/END

